[package]
name = "scroll_strategist_cli"
version = "0.1.0"
authors = ["deer <capreolina@protonmail.ch>"]
edition = "2018"
description = "A minimal & simplistic CLI to the scroll_strategist algorithms"
repository = "https://codeberg.org/deer/scroll_strategist_cli"
readme = "README.md"
keywords = ["maplestory", "scroll", "strategy", "dynamic-programming", "cli"]
categories = ["games", "command-line-interface"]
license = "AGPL-3.0-or-later"

[dependencies]
clap = "3.0.0-beta.2"
scroll_strategist = { path = "../scroll_strategist" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
